--- a/.env
+++ b/.env
@@ -26,3 +26,14 @@ APP_SECRET=bc67f2f3ad55f0b3bde31d85b79d3eae
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=null://null
+MAILER_DSN=smtp://0df316347ae811:c121d098e19954@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+###< symfony/mailer ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=96ec2c93d50049cbe74faeaf3fa2a569
+###< lexik/jwt-authentication-bundle ###
