--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,28 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.6",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
+        "friendsofsymfony/rest-bundle": "^3.3",
+        "jms/serializer-bundle": "^4.0",
+        "lexik/jwt-authentication-bundle": "^2.15",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "6.0.*",
+        "symfony/debug-bundle": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/mailer": "6.0.*",
         "symfony/maker-bundle": "^1.42",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/options-resolver": "6.0.*",
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
+        "symfony/security-bundle": "6.0.*",
+        "symfony/serializer": "6.0.*",
+        "symfony/validator": "6.0.*",
         "symfony/yaml": "6.0.*"
     },
     "config": {
@@ -69,5 +81,9 @@
             "allow-contrib": false,
             "require": "6.0.*"
         }
+    },
+    "require-dev": {
+        "symfony/stopwatch": "6.0.*",
+        "symfony/web-profiler-bundle": "6.0.*"
     }
 }
