--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -9,7 +9,8 @@ fos_rest:
     formats: { json: true, xml: false, rss: false}
   format_listener:
     rules:
-      - { path: ^/api, prefer_extension: true, fallback_format: json, priorities: [json, html] }
+      - { path: ^/api/, priorities: [ html, json, xml ], fallback_format: ~, prefer_extension: true }
+      - { path: '^/', priorities: [ 'html', '*/*'], fallback_format: html, prefer_extension: true }
 #    param_fetcher_listener:  true
 #    allowed_methods_listener:  true
 #    routing_loader: true
