--- a/.env
+++ b/.env
@@ -17,7 +17,8 @@
 APP_ENV=dev
 APP_SECRET=bc67f2f3ad55f0b3bde31d85b79d3eae
 ###< symfony/framework-bundle ###
-
+APP_DEBUG=true
+TRUSTED_PROXIES=127.0.0.1,REMOTE_ADDR
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
