--- a/config/packages/web_profiler.yaml
+++ b/config/packages/web_profiler.yaml
@@ -4,8 +4,9 @@ when@dev:
         intercept_redirects: false
 
     framework:
-        profiler: { only_exceptions: false }
-
+        profiler:
+            only_exceptions: false
+            collect: true
 when@test:
     web_profiler:
         toolbar: false
