--- a/.env
+++ b/.env
@@ -32,6 +32,7 @@ TRUSTED_PROXIES=127.0.0.1,REMOTE_ADDR
 # MAILER_DSN=null://null
 MAILER_DSN=smtp://0df316347ae811:c121d098e19954@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
+CORS_ALLOW_ORIGIN="^https?://.*?$"
 
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
