--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Events\LoginListener:
+        class: App\Events\LoginListener
+        # arguments: [ '@doctrine.orm.default_entity_manager', '@App\Services\Dashboard\RightManagement' ]
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created, method: onJWTCreated }
